--- a/CRM/Views/Fee/AddFee.cshtml
+++ b/CRM/Views/Fee/AddFee.cshtml
@@ -47,7 +47,7 @@
                                     <div class="row">
                                         <div class="col-md-4">
                                             <div class="form-group">
-                                                <label>Subject</label>
+                                                <label>Class</label>
                                                 <select id="ddlSubject" asp-for="Subject" asp-items="Model.ClassList" class="form-control"></select>
                                             </div>
                                         </div>
@@ -66,11 +66,8 @@
                                         <div class="col-md-4">
                                             <div class="form-group">
                                                 <label>Session</label>
-                                                <select id="ddlSession" class="form-control" asp-for="Session">
+                                                <select id="ddlSession" class="form-control"  asp-items="Model.SessionList" asp-for="Session">
                                                     <option>Select</option>
-                                                    <option>2025-2026</option>
-                                                    <option>2026-2027</option>
-                                                    <option>2027-2028</option>
                                                 </select>
                                             </div>
                                         </div>
